feat(wishlist): implement wishlist module with comprehensive test suite